# atlas

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
atlas/api/: README.md  app.py  auth.py  billing.py  free_tier.py  jobs.py  main.py  serialize.py  tasks.py
atlas/core/: model.py  pipeline.py  sgsr2_flow.py
atlas/eval/: perplexity.py  sliding_ppl.py
atlas/pack/: mlx_packer.py
atlas/plan/: pareto.py  planner.py
atlas/profile/: calib.py  cost_table.py  hardware.py  kl.py  layers.py
atlas/quant/: adaptive_smooth.py  compensator.py  fakequant.py  manual.py  mixed.py  mlx_quantizer.py  qi_smooth.py  (+1 more)
cli/: main.py
cost_tables/: Qwen_Qwen2.5-7B-Instruct.json  TinyLlama_TinyLlama-1.1B-Chat-v1.0.json
paper/: main.tex  references.bib
results/: baseline_ablation_qwen.json  baseline_ablation_tinyllama.json  kquants_Qwen_Qwen2.5-7B-Instruct.json  kquants_TinyLlama_TinyLlama-1.1B-Chat-v1.0.json  phase3_qwen25_7b.json  sgsr2_additivity_TinyLlama_TinyLlama-1.1B-Chat-v1.0.json  sgsr2_pareto_Qwen_Qwen2.5-7B-Instruct.json  sgsr2_pareto_TinyLlama_TinyLlama-1.1B-Chat-v1.0.json  sgsr2_verdict.md
scripts/: baseline_ablation.py  dump_wikitext2_test.py  kquants_compare.sh  phase3_benchmark.py  plot_pareto.py  sgsr2_pareto.py  sgsr2_validate_additivity.py
tests/: test_adaptive_smooth.py  test_e2e.py  test_error_compensator.py  test_hardware.py  test_layer_profiler.py  test_manual_quantizer.py  test_mixed_quantizer.py  test_model.py  test_packer.py  test_perplexity.py  test_pipeline.py  test_planner.py  test_qi_smooth.py  test_quantizer.py  test_smooth_quantizer.py
(+16 files in other folders)
