[project]
name = "atlas-compress"
version = "0.1.0"
description = "Universal lossless model compressor"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "huggingface-hub>=0.20",
    "mlx>=0.30",
    "mlx-lm>=0.20",
    "transformers>=4.40",
    "numpy",
    "datasets",
]

[project.scripts]
atlas = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atlas*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
