[project]
name = "atlas-compress"
version = "0.1.0"
description = "Universal lossless model compressor"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "huggingface-hub>=0.20",
    "mlx>=0.30",
    "mlx-lm>=0.20",
    "transformers>=4.40",
    "numpy",
    "datasets",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "redis>=5.0",
    "celery>=5.3",
    "pyjwt[crypto]>=2.8",
    "stripe>=9.0",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.21",
    "pytest",
]

[project.scripts]
atlas = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atlas*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that download models and run quantization (deselect with '-m \"not slow\"')",
]
